--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-    "tabWidth": 4,
-    "useTabs": true,
-    "printWidth": 80
+	"tabWidth": 4,
+	"useTabs": true,
+	"printWidth": 80,
+	"singleQuote": true
 }
